--- a/docs/user-guides/tools/index.mdx
+++ b/docs/user-guides/tools/index.mdx
@@ -1,10 +1,10 @@
-# LangSwarm V2 Tool System Documentation
+# LangSwarm Tool System Documentation
 
-**Complete documentation for the unified LangSwarm V2 tool system**
+**Complete documentation for the unified LangSwarm tool system**
 
 ## 🎯 Overview
 
-LangSwarm V2 introduces a revolutionary unified tool system that consolidates 4 different tool types into a single, consistent MCP-based architecture. This documentation provides everything you need to understand, use, and develop tools in the new system.
+LangSwarm features a unified tool system that consolidates different tool types into a single, consistent MCP-based architecture. This documentation provides everything you need to understand, use, and develop tools in the system.
 
 ---
 
@@ -31,7 +31,7 @@ LangSwarm V2 introduces a revolutionary unified tool system that consolidates 4 
 
 ---
 
-## 📊 **V2 Tool System Benefits**
+## 📊 **Unified Tool System Benefits**
 
 ### **Before V2: Fragmented Tool Landscape**
 ```
@@ -131,11 +131,9 @@ During the migration period:
 ## 📚 **Documentation Structure**
 
 ### **[🚀 Unified System](architecture)**
-Complete overview of the V2 unified tool architecture.
+Complete overview of the unified tool architecture.
 
-- **Architecture Overview**: V2 tool system design
-- **Migration Benefits**: Why unification matters
-- **Compatibility Strategy**: How existing tools continue working
+- **Architecture Overview**: Tool system design
 - **Performance Improvements**: Async execution and optimization
 
 ### **[🔧 MCP Ecosystem](mcp/local-mode)**
@@ -341,4 +339,4 @@ except Exception as e:
 
 ---
 
-**The LangSwarm V2 tool system provides a powerful, unified platform for extending LangSwarm functionality while maintaining simplicity and consistency across all tool types.**
+**The LangSwarm tool system provides a powerful, unified platform for extending LangSwarm functionality while maintaining simplicity and consistency across all tool types.**
