--- a/docs/user-guides/tools/migration.mdx
+++ b/docs/user-guides/tools/migration.mdx
@@ -1,10 +1,10 @@
-# LangSwarm V2 Legacy Tool Migration
+# LangSwarm Legacy Tool Migration
 
 **Complete migration system for Synapse, RAG, and Plugin tools to unified V2 architecture**
 
 ## 🎯 Overview
 
-LangSwarm V2 provides comprehensive migration support for all legacy tool types, transforming fragmented V1 systems into a unified, modern tool architecture. Migrate Synapse, RAG, and Plugin tools seamlessly while maintaining 100% backward compatibility.
+LangSwarm provides comprehensive migration support for legacy tool types, transforming fragmented systems into a unified, modern tool architecture. Migrate Synapse, RAG, and Plugin tools seamlessly while maintaining backward compatibility.
 
 **Key Benefits:**
 - **100% Legacy Support**: All existing tools work through V2 interface
