--- a/docs/getting-started/installation/index.mdx
+++ b/docs/getting-started/installation/index.mdx
@@ -1,4 +1,4 @@
-# 📦 LangSwarm V2 Installation Guide
+# 📦 LangSwarm Installation Guide
 
 **Complete installation instructions for all environments and use cases.**
 
@@ -26,7 +26,7 @@ pip install -e .
 - **Operating Systems**: Windows, macOS, Linux
 
 ### **Dependencies**
-LangSwarm V2 automatically installs all required dependencies:
+LangSwarm automatically installs all required dependencies:
 - `openai>=1.79.0` - OpenAI API client
 - `pydantic>=2.11.4` - Data validation
 - `pyyaml>=6.0.2` - Configuration parsing
@@ -255,4 +255,4 @@ After successful installation:
 
 ---
 
-**🎉 Installation complete! Ready to build powerful AI systems with LangSwarm V2.**
+**🎉 Installation complete! Ready to build powerful AI systems with LangSwarm.**
